sql/src/test/resources/drill/window/queries/negative/drill-3360.res
0\t
VALIDATION ERROR
.*ORDER BY expression should not contain OVER clause
